iFeature Changelog

****************************

Version 4.0.5 (02-20-12)
-Fix for HTML tables.

Version 4.0.4 (02-17-12)
-Adjustment to Foundation JS calls to fix further plugin conflicts.
-Fixed broken credit link.
-Fixed IE8 post thumbnail bug.
-IE7 styling fixes.
-Fixed slider captions not displaying.
-Fixed page title option bug. 
-Extended featured image option to Archive and Single templates.
-Theme options copy update.

Version 4.0.3 (02-13-12)
-jQuery no-conflict fix for better plugin compatibility. 
-Removed slider timer animation.
-Adjustment to mobile menu js to fix conflict issue.
-Adjustment to slider arrows.
-Moved custom responsive CSS out of general style sheet to avoid conflict with responsive design disabled.
-Removed several unecessary options.
-Fixed description color option.
-Adjustment to home button.

Version 4.0.2 (02-06-12)
-Fixed slider image filename.
-Fixed postbar bug on single pages.
-Removing slider from active blog elements now hides it.
-Fixed CSS bug with media embeds. 
-Various responive design style fixes.
-Added old slider arrows back, added option to disable timer. 

Version 4.0.1 (02-04-12)
-License notification and theme URI fix. 

Version 4.0 (02-03-12)
-Added Foundation CSS grid, offering both responsive and static design.
-Drag and Drop Header and Blog elements added.
-Added WordPress Template Options (404, Search, Archive, Single)
-Replaced NivoSlider with Orbit.
-General bug and style fixes.

Version 3.1.4 (01-25-12)
-Moved scripts into unified function, hooking into wp_enqueue_script.

Version 3.1.3 (01-16-12)
-Fixed bug with featured thumb option.
-Re-added link color option.
-Removed unnecessary option from post meta options. 
-Fixed bug with page SEO output. 

Version 3.1.2 (01-06-12)
-Fixed social icon bug.
-Fixed menu bug.
-Fixed default color scheme bug.

Version 3.1.1 (01-05-12)
-IE 8 fix.

Version 3.1 (01-04-12)
-Changes to CyberChimps Core Framework.