@@ -43,7 +43,7 @@ a{outline:none}
 	margin-bottom: 15px;
 }
 
-.featured-image {float: inherit\0/ !important;}
+.featured-image { float : inherit\9 !important; }
 
 /* Fonts  */
 
