@@ -102,19 +102,25 @@ function if_featured_image_alignment() {
 
 	global $themename, $themeslug, $options;
 	
+	if ($options->get($themeslug.'_featured_image_align') == "key4" ) {
+
+		echo '<style type="text/css">';
+		echo ".featured-image {float: none;}";
+		echo '</style>';
+	}
 	if ($options->get($themeslug.'_featured_image_align') == "key3" ) {
 
 		echo '<style type="text/css">';
 		echo ".featured-image {float: right;}";
 		echo '</style>';
 	}
-	elseif ($options->get($themeslug.'_featured_image_align') == "key2" ) {
+	if ($options->get($themeslug.'_featured_image_align') == "key2" ) {
 
 		echo '<style type="text/css">';
 		echo ".featured-image {text-align: center;}";
 		echo '</style>';	
 	}
-	else {
+	if  ($options->get($themeslug.'_featured_image_align') == "key1" )  {
 
 		echo '<style type="text/css">';
 		echo ".featured-image {float: left;}";
